<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nsbe.com.bankly.activity.StatementActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00ffffff"
        app:elevation="0dp">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#00ffffff"
            android:elevation="0dp"
            android:layoutDirection="rtl"
            app:contentInsetEndWithActions="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_if_close">


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Statements"
                android:textAlignment="center"
                android:gravity="center"
                app:textAllCaps="true"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/cardview"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    app:cardBackgroundColor="@color/cardview_light_background"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/total_spent"
                            android:textColor="#bbbbbb"
                            android:textSize="14sp"
                            android:textStyle="bold" />


                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/spent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="16dp"
                            android:paddingStart="16dp"
                            tools:text="$200.00"
                            android:textColor="#333333"
                            android:textSize="22sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="8dp"
                    app:cardBackgroundColor="@color/cardview_light_background"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/current_balance"
                            android:textColor="#bbbbbb"
                            android:textSize="14sp"
                            android:textStyle="bold" />


                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/balance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="16dp"
                            android:paddingStart="16dp"
                            tools:text="$200.00"
                            android:textColor="#333333"
                            android:textSize="22sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:text="Expenses"
                android:textSize="16sp"
                android:id="@+id/expense_text"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:textColor="#fff"
                app:textAllCaps="true"
                android:layout_below="@id/cardview"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_below="@id/expense_text"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/holder_statement_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>






    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
