<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    tools:openDrawer="start"
    android:layout_height="match_parent">


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="nsbe.com.bankly.activity.MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00ffffff"
            app:elevation="0dp">


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#00ffffff"
                android:elevation="0dp"
                app:contentInsetEnd="0dp"
                app:contentInsetEndWithActions="0dp"

                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/ic_if_menu">


                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/dashboard"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:id="@+id/cardview"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/cardview_light_background"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/balance"
                            android:textColor="#333"
                            android:textSize="14sp"
                            android:textStyle="bold" />


                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="16dp"
                            android:paddingStart="16dp"
                            tools:text="$200.00"
                            android:id="@+id/balance"
                            android:textColor="#333333"
                            android:textSize="22sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                </android.support.v7.widget.CardView>




                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:layout_margin="8dp"
                    android:layout_below="@id/cardview"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/cardview_light_background"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <android.support.v7.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:padding="16dp"
                                android:text="@string/progression"
                                android:textColor="#333"
                                android:textSize="16sp"
                                android:textStyle="bold" />


                            <android.support.v7.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:paddingStart="16dp"
                                android:paddingEnd="16dp"
                                android:text="Analytics"
                                android:id="@+id/progression_text"
                                android:textColor="@color/colorAccent"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </LinearLayout>



                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#bbbbbb" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">



                            <com.github.mikephil.charting.charts.PieChart
                                android:id="@+id/bar_chart"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">


                            </com.github.mikephil.charting.charts.PieChart>
                        </LinearLayout>


                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </RelativeLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/options"
        android:background="@drawable/gradient_reverse"
        android:gravity="start"
        app:headerLayout="@layout/header">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:textAllCaps="true"
                android:text="Logout"
                android:layout_alignParentBottom="true"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_above="@id/logout"
                android:background="@color/white" />


        </RelativeLayout>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>

